# orient

./: CMakeLists.txt  license.txt  notes.txt  plot.py  readme.md
cmake/: orientConfig.cmake.in
documentation/: conversion_formulas.tex  sources.bib
include/: OptionalRef.hpp  axis.hpp  common.hpp  eulerFromRotationMatrix.hpp  euler_from_rotation_matrix.hpp  fromAngleAxis.hpp  fromAxisAngle.hpp  fromEuler.hpp  fromQuaternion.hpp  fromRotationMatrix.hpp  from_angle_axis.hpp  normal_multivariate.hpp  normalize.hpp  rodrigues.hpp  trigonometric_derivatives.hpp
include/detail/: Index.hpp  axis_traits.hpp  skewSymmetric.hpp  skew_symmetric.hpp  so3_generator.hpp  traits.hpp  trigonometric_derivatives.hpp
include/orient/: axis.hpp  euler_from_rotation_matrix.hpp  from_angle_axis.hpp  from_euler.hpp  from_quaternion.hpp  from_rotation_matrix.hpp  normalize.hpp
include/orient/detail/: axis_traits.hpp  derivative_helpers.hpp  index.hpp  is_almost_eq.hpp  kronecker_product.hpp  skew_symmetric.hpp  so3_generator.hpp  trigonometric_derivatives.hpp
include/orient/impl/: aa_quat_from_rotation_matrix.hpp  euler_from_rotation_matrix.hpp  from_angle_axis.hpp  from_euler.hpp  from_quaternion.hpp
src/: .aa2eu.cpp.swp  OptionalRef.cpp  aa2eu.cpp  fromAngleAxis.cpp  fromAxisAngle.cpp  fromQuaternion.cpp  fromRotationMatrix.cpp  from_angle_axis.cpp  from_quaternion.cpp  from_rotation_matrix.cpp  rodrigues.cpp  simu.cpp
test/: aa_quat_from_rotation_matrix_test.cpp  derivative_helpers_test.cpp  euler_from_rotation_matrix_test.cpp  from_angle_axis_test.cpp  from_euler_test.cpp  from_quaternion_test.cpp  from_rotation_matrix_test.cpp  normalize_test.cpp  testEulerFromRotationMatrix.cpp  testFromAngleAxis.cpp  testFromAxisAngle.cpp  testFromEuler.cpp  testFromQuaternion.cpp  testFromRotationMatrix.cpp  testNormalize.cpp  testTrigo.cpp  trigonometry_test.cpp
